--- a/brand.html
+++ b/brand.html
@@ -11,47 +11,23 @@
 	<link rel="stylesheet" href="slick/slick.css">
 	<link rel="stylesheet" href="slick/slick-theme.css">
 	<link rel="stylesheet" href="css/style-brand.css">
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css"> -->
-
 </head>
 
 	<!-- jQuery-st -->
 	<script>
-		// page-top
-		jQuery(function() {
-			var pagetop = $('#page_top');   
-			pagetop.hide();
-			$(window).scroll(function () {
-				if ($(this).scrollTop() > 100) {  //100pxスクロールしたら表示
-					pagetop.fadeIn();
-				} else {
-					pagetop.fadeOut();
-				}
-			});
-			pagetop.click(function () {
-				$('body,html').animate({
-					scrollTop: 0
-				}, 500); //0.5秒かけてトップへ移動
-				return false;
-			});
+			// ハンバーガーメニュー
+			$(function() {
+		$('.hamburger').click(function() {
+			$(this).toggleClass('active');
+	
+			if ($(this).hasClass('active')) {
+				$('.globalMenuSp').addClass('active');
+			} else {
+				$('.globalMenuSp').removeClass('active');
+			}
 		});
-
-
-
-		// ハンバーガーメニュー
-		$(function() {
-    $('.hamburger').click(function() {
-        $(this).toggleClass('active');
- 
-        if ($(this).hasClass('active')) {
-            $('.globalMenuSp').addClass('active');
-        } else {
-            $('.globalMenuSp').removeClass('active');
-        }
-    });
-});
-   </script>   
+	});
+   	</script>   
     <!-- jQuery-end -->
 
 
@@ -73,11 +49,11 @@
 				<nav class="globalMenuSp">
 					<ul>
 						<li><a href="index.html">ホーム</a></li>
-						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
+						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -86,11 +62,11 @@
 				<nav class="nav">
 					<ul>
 						<li><a href="index.html">ホーム</a></li>
-						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
+						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
 						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -159,19 +135,19 @@
 			<div class="ft-nav">
 				<ul class="list" >
 					<li><a href="index.html">ホーム</a></li>
-					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
+					<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
+					<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
 					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
 					<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
 			<div class="ft-nav">
-				<div class="ft-contact"><a href="#" target="_blank" rel="noopener">お問い合わせ</a></div>
+				<div class="ft-contact"><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></div>
 		    </div>
 			<div class="ft-nav">
 				<ul>
-					<a href="#" target="_blank" rel="noopener"><li>サイトマップ</li></a>
-					<a href="#" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
+					<a href="about.html" target="_blank" rel="noopener"><li>サイトのご利用について</li></a>
+					<a href="privacy policy.html" target="_blank" rel="noopener"><li class="border">プライバシーポリシー</li></a>
 				</ul>
 		    </div>
 			<div class="ft-logo">
@@ -184,9 +160,6 @@
 				<a href="#" target="_blank" rel="noopener"><img src="img/line.png" alt="" width="16"></a>
 				<!-- <a href=""><img src="img/mail3.png" alt="" width="20"></a> -->
 			</div>
-			<!-- ページトップ-st -->
-			<div id="page_top"><a href="#"></a></div>
-			<!-- ページトップ-end -->
 		</div>
 		<div class="Copyright">
 			<small>Copyright c Tokukei. All Rights Reserved.</small>
