--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
 				</ul>
 		    </div>
 			<div class="ft-logo">
-				<a href="#"><img src="img/foot_logo_tokukei.gif" alt=""></a>
+				<a href="#"><img src="img/foot_logo_tokukei.png" alt=""></a>
 			</div>
 			<div class="sns">
 				<a href="#" target="_blank" rel="noopener"><img src="img/fb.png" alt="" width="15"></a>
