--- a/open_flow.html
+++ b/open_flow.html
@@ -67,12 +67,12 @@
 				
 				<nav class="globalMenuSp">
 					<ul>
-						<li><a href="#">ホーム</a></li>
-						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
-						<li><a href="#" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="index.html">ホーム</a></li>
+						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -80,12 +80,12 @@
 			<div class="nav-oya">
 				<nav class="nav">
 					<ul>
-						<li><a href="#">ホーム</a></li>
-						<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-						<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
-						<li><a href="#" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-						<li><a href="#" target="_blank" rel="noopener">採用</a></li>
-						<li><a href="#" target="_blank" rel="noopener">お問い合わせ</a></li>
+						<li><a href="index.html">ホーム</a></li>
+						<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
+						<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
+						<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
+						<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
+						<li><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -119,15 +119,15 @@
 		<div class="ft-nav-oya">
 			<div class="ft-nav">
 				<ul class="list" >
-					<li><a href="#">ホーム</a></li>
-					<li><a href="#" target="_blank" rel="noopener">企業情報</a></li>
-					<li><a href="#" target="_blank" rel="noopener">展開ブランド</a></li>
-					<li><a href="#" target="_blank" rel="noopener">フランチャイズ募集</a></li>
-					<li><a href="#" target="_blank" rel="noopener">採用</a></li>
+					<li><a href="index.html">ホーム</a></li>
+					<li><a href="company.html" target="_blank" rel="noopener">企業情報</a></li>
+					<li><a href="brand.html" target="_blank" rel="noopener">展開ブランド</a></li>
+					<li><a href="franchise.html" target="_blank" rel="noopener">フランチャイズ募集</a></li>
+					<li><a href="recruit.html" target="_blank" rel="noopener">採用</a></li>
 				</ul>
 		    </div>
 			<div class="ft-nav">
-				<div class="ft-contact"><a href="#" target="_blank" rel="noopener">お問い合わせ</a></div>
+				<div class="ft-contact"><a href="contact.html" target="_blank" rel="noopener">お問い合わせ</a></div>
 		    </div>
 			<div class="ft-nav2">
 				<ul>
